--- a/viewer/templates/index.html
+++ b/viewer/templates/index.html
@@ -7,9 +7,16 @@
 <body>
 <h1>Hlavní stránka obchodu Albert</h1>
 
+<h2>Auta</h2>
 {% for car in all_cars %}
 <br>{{ car.brand }} -{{car.color}}
 {% endfor %}
+
+<h2>Nabídky</h2>
+{% for offer in all_offers %}
+<p>{{offer.price}} - {{offer.description}} - {{offer.offered_car}}</p>
+{% endfor %}
+
 
 </body>
 </html>
