--- a/viewer/templates/offers.html
+++ b/viewer/templates/offers.html
@@ -1,12 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<h1>Hlavní stránka obchodu Albert</h1>
-
-<h2>Auta</h2>
-{% for car in all_cars %}
-<br>{{ car.brand }} -{{car.color}}
-{% endfor %}
+<h1>Stránka nabídek</h1>
 
 <h2>Nabídky</h2>
 {% for offer in all_offers %}
