--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Obchod</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
-<ul>
-    <li><a href="{% url 'main' %}">Main page</a></li>
-    <li><a href="{% url 'cars' %}">Cars</a></li>
-    <li><a href="{% url 'offers' %}">Offers</a></li>
+<ul class="nav justify-content-center">
+  <li class="nav-item"><a class="nav-link" href="{% url 'main' %}">Main page</a></li>
+  <li class="nav-item"><a class="nav-link" href="{% url 'cars' %}">Cars</a></li>
+  <li class="nav-item"><a class="nav-link" href="{% url 'offers' %}">Offers</a></li>
 </ul>
 
 {% block content %}
