--- a/viewer/templates/cars.html
+++ b/viewer/templates/cars.html
@@ -2,11 +2,13 @@
 
 {% block content %}
 <h1>Stránka aut</h1>
+<a href="{% url 'create_car' %}">Create car</a>
 
 <h2>Auta</h2>
 {% for car in all_cars %}
-<br>{{ car.brand }} -{{car.color}}
-{% endfor %}
+<h4>{{ car.brand }} -{{car.color}} <a href={% url 'update_car' car.pk %}>upravit</a>
+</h4>
+    {% endfor %}
 
 
 {% endblock %}
