feat: many-to-many example

--- a/viewer/templates/cars.html
+++ b/viewer/templates/cars.html
@@ -7,6 +7,7 @@
 <h2>Auta</h2>
 {% for car in all_cars %}
 <h4>{{ car.brand }} -{{car.color}}
+    Features {% for feature in car.features.all %}{{feature.feature_name}}{% endfor %}
     <a href={% url 'update_car' car.pk %}>upravit</a>
     <a href={% url 'delete_car' car.pk %}>smazat</a>
 </h4>
