--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -10,6 +10,11 @@
   <li class="nav-item"><a class="nav-link" href="{% url 'main' %}">Main page</a></li>
   <li class="nav-item"><a class="nav-link" href="{% url 'cars' %}">Cars</a></li>
   <li class="nav-item"><a class="nav-link" href="{% url 'offers' %}">Offers</a></li>
+    {% if user.is_authenticated %}
+  <li class="nav-item"><form action="{% url 'logout' %}" method="POST">{% csrf_token %}<input type="submit" value="Logout - {{user.username}}"></form></li>
+    {% else %}
+  <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Login</a></li>
+    {% endif %}
 </ul>
 
 {% block content %}
