--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -11,9 +11,12 @@
   <li class="nav-item"><a class="nav-link" href="{% url 'cars' %}">Cars</a></li>
   <li class="nav-item"><a class="nav-link" href="{% url 'offers' %}">Offers</a></li>
     {% if user.is_authenticated %}
-  <li class="nav-item"><form action="{% url 'logout' %}" method="POST">{% csrf_token %}<input type="submit" value="Logout - {{user.username}}"></form></li>
-    {% else %}
-  <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Login</a></li>
+  <li class="nav-item"><a class="nav-link" href="{% url 'userpage' %}">Uživatel: {{user.username}}</a></li>
+  <li class="nav-item "><form action="{% url 'logout' %}" method="POST">
+      {% csrf_token %}<input type="submit" value="Logout" class="btn btn-outline-secondary"></form>
+  </li>
+   {% else %}
+  <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
     {% endif %}
 </ul>
 
