feat: user group view

--- a/viewer/templates/user.html
+++ b/viewer/templates/user.html
@@ -23,4 +23,10 @@
 {{perm.name}} -- {{perm.codename}}<br>
 {% endfor %}
 
+<h2>Groups</h2>
+
+{% for group in user.groups.all %}
+<h3>{{group}}</h3> {% for perm in group.permissions.all %} {{perm.codename}}{%endfor%}<br>
+{% endfor %}
+
 {% endblock %}
