--- a/viewer/templates/base.html
+++ b/viewer/templates/base.html
@@ -16,6 +16,8 @@
       {% csrf_token %}<input type="submit" value="Logout" class="btn btn-outline-secondary"></form>
   </li>
    {% else %}
+
+  <li class="nav-item"><a class="nav-link" href="{% url 'registration' %}">Register</a></li>
   <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Login</a></li>
     {% endif %}
 </ul>
